force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work_Subscriber__c/fields/agf__Always_Send__c.field-meta.xml
<CustomField>
    <fullName>agf__Always_Send__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Always Send</label>
    <type>Checkbox</type>
</CustomField>