force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work_Subscriber__c/fields/agf__Distribution_List__c.field-meta.xml
<CustomField>
    <fullName>agf__Distribution_List__c</fullName>
    <label>Distribution List</label>
    <type>Email</type>
</CustomField>