force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work_Subscriber__c/fields/agf__Email__c.field-meta.xml
<CustomField>
    <fullName>agf__Email__c</fullName>
    <formula>$User.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>