force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work_Subscriber__c/fields/agf__Is_Copy__c.field-meta.xml
<CustomField>
    <fullName>agf__Is_Copy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Copy</label>
    <type>Checkbox</type>
</CustomField>