force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work_Subscriber__c/fields/agf__Recipient_Input__c.field-meta.xml
<CustomField>
    <fullName>agf__Recipient_Input__c</fullName>
    <label>Recipient Input</label>
    <length>50</length>
    <type>Text</type>
</CustomField>