force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work_Subscriber__c/fields/agf__UserId__c.field-meta.xml
<CustomField>
    <fullName>agf__UserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N90000000NkrdEAC</relationshipName>
    <type>Lookup</type>
</CustomField>