force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work_Subscriber__c/fields/agf__WorkId__c.field-meta.xml
<CustomField>
    <fullName>agf__WorkId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WorkId</label>
    <referenceTo>agf__ADM_Work__c</referenceTo>
    <relationshipName>R00N90000000NkreEAC</relationshipName>
    <type>Lookup</type>
</CustomField>